Update file names.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .container-fluid {
-	background-image: url(../images/diamonds2.png);
+	background-image: url(../images/diamonds2.PNG);
 	font-size: 18px;
 	line-height: 34px;
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
